rename css file

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,5 +1,5 @@
-@import 'mappane/_MousePosition.scss';
-@import 'features/_stations.scss';
+@import 'mappane/_mousePosition.scss';
+@import 'features/_stationsFeature.scss';
 
 #mapPane,
 .map {
