--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -33,8 +33,8 @@
   form {
     display: flex;
     flex-flow: column wrap;
-    max-height: 50rem;
-    min-height: 46rem; /* 'hack' for Safari, which does not calculate flex parent height correctly */
+    max-height: 70rem;
+    min-height: 66rem; /* 'hack' for Safari, which does not calculate flex parent height correctly */
 
     h3 {
       margin: 1.75rem 0 .5rem;
@@ -70,11 +70,15 @@
   }
 
   .details {
-    order: 5;
+    order: 6;
+  }
+
+  .foreshocks {
+    order: 3;
   }
 
   .historical {
-    order: 3;
+    order: 4;
   }
 
   .mainshock {
@@ -86,7 +90,7 @@
   }
 
   .meta {
-    order: 4;
+    order: 5;
   }
 
   .reset {
@@ -146,8 +150,12 @@
       }
     }
 
-    .historical {
+    .foreshocks {
       order: 4;
+    }
+
+    .historical {
+      order: 5;
     }
 
     .mainshock {
@@ -155,7 +163,7 @@
     }
 
     .meta {
-      order: 5;
+      order: 6;
     }
   }
 }
