set rendering order of foreshocks feature

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -83,8 +83,11 @@
   .aftershocks {
     order: 1;
   }
+  .foreshocks {
+    order: 2
+  }
   .historical {
-    order: 2;
+    order: 3;
   }
 
   .bin {
