--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -25,14 +25,17 @@
 .leaflet-aftershocks-pane {
   z-index: 422;
 }
-.leaflet-historical-pane {
+.leaflet-foreshocks-pane {
   z-index: 421;
 }
-.leaflet-stations-pane {
+.leaflet-historical-pane {
   z-index: 420;
 }
-.leaflet-faults-pane {
+.leaflet-stations-pane {
   z-index: 419;
+}
+.leaflet-faults-pane {
+  z-index: 418;
 }
 
 /* Match popup font-size to rest of app */
