--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,4 +1,4 @@
-@import 'mappane/_MousePosition.scss';
+@import 'mappane/_mousePosition.scss';
 @import 'features/_stationsFeature.scss';
 
 #mapPane,
