--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -192,7 +192,7 @@
 @media only screen
 and (max-width: $breakpoint-phone-width) {
   #summaryPane {
-    .location {
+    .eqid, .location {
       display: none;
     }
   }
