set configurable display props in css only (instead of in plotly config)

--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -34,6 +34,8 @@
 
   .hovertext {
     path {
+      fill: #fff !important;
+      fill-opacity: 0.9 !important;
       stroke: #ccc !important;
     }
     text {
