resize product thumbnails

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -167,14 +167,14 @@
     flex-wrap: wrap;
 
     > div {
-      margin-right: 3em;
+      margin-right: 2em;
 
       &.hide {
         display: none;
       }
 
-      &:last-child {
-        border: 0;
+      > a img {
+        width: 180px;
       }
     }
 
