remove default styling in chrome that conflicts with defined styles

--- a/src/htdocs/css/features/_stationsFeature.scss
+++ b/src/htdocs/css/features/_stationsFeature.scss
@@ -178,6 +178,9 @@
 }
 
 .station-channels-map {
+  abbr[title] {
+    text-decoration: none; /* clean up default styling in Chrome */
+  }
   td {
     padding: .4em;
   }
