--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -162,6 +162,18 @@
     }
   }
 
+  .list {
+    tr {
+      transition: background .3s ease-out;
+    }
+    tr:hover:not(.no-sort) {
+      color: #014c73;
+      cursor: pointer;
+      background: #f8fbfd;
+      transition-duration: 0s;
+    }
+  }
+
   .products {
     display: flex;
     flex-wrap: wrap;
