--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -164,9 +164,9 @@
 
   .list {
     tr {
-      transition: background .3s ease-out;
+      transition: background .25s ease-out;
     }
-    tr:hover:not(.no-sort) {
+    tr:hover:not(.no-sort), .selected {
       color: #014c73;
       cursor: pointer;
       background: #f8fbfd;
