--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -105,6 +105,30 @@ tr {
   }
 }
 
+#loading {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  opacity: 0.9;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+
+  &.hide {
+    display: none;
+  }
+
+  p {
+    font-size: 3em;
+    opacity: 0.7;
+  }
+}
+
 .content {
   line-height: 1.6;
   padding: 1em;
