--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -107,25 +107,27 @@ tr {
 
 #loading {
   background: #fff;
-  display: flex;
-  flex-direction: column;
   height: 100%;
-  justify-content: center;
   left: 0;
   opacity: 0.9;
   position: fixed;
-  text-align: center;
   top: 0;
   width: 100%;
   z-index: 1000;
 
   &.hide {
-    display: none;
+    visibility: hidden;
   }
 
   p {
+    display: flex;
+    flex-direction: column;
     font-size: 3em;
-    opacity: 0.7;
+    height: 100%;
+    justify-content: center;
+    opacity: 0.6;
+    text-align: center;
+    width: 100%;
   }
 }
 
