--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -1,5 +1,5 @@
 #navBar {
-  background-color: rgba(77, 68, 130, .9);
+  background-color: rgba(225, 220, 242, 0.95);;
   display: flex;
   left: 0;
   margin: 0;
@@ -10,14 +10,15 @@
   z-index: 10000;
 
   a {
-    color: #fff;
+    color: $link-color;
     display: block;
-    font-size: 1.1rem;
-    padding: 12px 16px;
+    font-size: 1.15rem;
+    padding: 11px 15px;
     text-decoration: none;
 
     &.selected {
-      background-color: #a196f1;
+      background-color: $link-color;
+      color: #fff;
     }
   }
   li {
