--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -2,9 +2,9 @@ $breakpoint-phone-width: 735px;
 $breakpoint-tablet-width: 1023px;
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-size: 15px;
-$link-color: rgb(78, 78, 202);
-$link-color-active: rgb(204, 0, 0);
-$link-color-visited: rgb(140, 78, 202);
+$link-color: #7234DC;
+$link-color-active: #DC406D;
+$link-color-visited: #7234DC;
 
 @import '_editPane.scss';
 @import '_helpPane.scss';
@@ -111,7 +111,7 @@ tr {
 }
 
 .darker {
-  background: #f5f8fd;
+  background: #f9f9f9;
 }
 
 .lighter {
