--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -5,6 +5,7 @@ $font-size: 15px;
 $link-color: #7234DC;
 $link-color-active: #DC406D;
 $link-color-visited: #7234DC;
+$reset-button-color: #efefef;
 
 @import '_editPane.scss';
 @import '_helpPane.scss';
