--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -1,48 +1,19 @@
-$reset-color: #efefef;
+@import '_forms.scss';
 
 #editPane {
   button {
-    -webkit-appearance: button;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.4;
-    margin-top: 2em;
-    padding: 6px 12px;
-    text-align: center;
-    user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-
-    &:active {
-      box-shadow: inset 0 3px 8px rgba(0, 0, 0, .175);
-      outline: 0;
-    }
-    &:focus {
-      outline: 0;
-    }
-
-    &[disabled] {
-      box-shadow: none;
-      cursor: not-allowed;
-      opacity: .3;
-    }
-
     &.reset {
-      background-color: $reset-color;
-      border-color: color($reset-color shade(15%));
+      background-color: $reset-button-color;
+      border-color: color($reset-button-color shade(15%));
       color: #666;
 
       &:active,
       &:hover {
-        background-color: color($reset-color shade(3%));
-        border-color: color($reset-color shade(25%));
+        background-color: color($reset-button-color shade(3%));
+        border-color: color($reset-button-color shade(25%));
       }
       &:focus {
-        border-color: color($reset-color shade(40%));
+        border-color: color($reset-button-color shade(40%));
       }
     }
 
@@ -102,28 +73,6 @@ $reset-color: #efefef;
     p {
       font-weight: 300;
       margin: .75rem 0 .25rem ;
-    }
-  }
-
-  input[type=text], input[type=number] {
-    border: 1px solid #DDD;
-    font-size: .9rem;
-    margin: 0 1px 3px 0;
-    outline: none;
-    padding: 6px 0 6px 6px;
-    transition: all 0.25s ease-in-out;
-    width: 12rem;
-
-    &:focus {
-      border: 1px solid $link-color;
-      box-shadow: 0 0 3px $link-color;
-    }
-    &:invalid {
-      border: 1px solid #c00;
-      box-shadow: 0 0 3px #c00;
-    }
-    &:-webkit-autofill {
-      background: none !important;
     }
   }
 
