--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,12 +1,4 @@
-$breakpoint-phone-width: 735px;
-$breakpoint-tablet-width: 1023px;
-$font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-size: 15px;
-$link-color: #7234DC;
-$link-color-active: #DC406D;
-$link-color-visited: #7234DC;
-$reset-button-color: #efefef;
-
+@import '_variables.scss';
 @import '_editPane.scss';
 @import '_helpPane.scss';
 @import '_impactBubbles.scss';
@@ -119,7 +111,7 @@ tr {
   background: #fff;
 }
 
-/* Earthquake details: mainshock on edit, summary panes (als0 Leaflet popups) */
+/* Earthquake details: mainshock on edit, summary panes (also Leaflet popups) */
 .earthquake, .leaflet-popup-content {
   dd,
   dt {
