--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -1,12 +1,8 @@
 #plotsPane {
   height: 100%;
 
-  h2 {
-    margin-top: 0;
-  }
-
   h2 + p {
-    margin: -.25rem 0 1.5rem;
+    margin-bottom: 2rem;
   }
 
   /* Rendering order of features */
