--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,6 +1,6 @@
 #summaryPane {
   h2 + p {
-    margin: -.25rem 0 1.5rem;
+    margin-bottom: 2rem;
   }
 
   h3 {
@@ -138,9 +138,6 @@
 
   .feature {
     width: 100%;
-    h2 {
-      margin-top: 0;
-    }
 
     &:first-child {
       border: 0;
