--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -42,19 +42,24 @@ body {
   position: relative;
 }
 
+h1, h2, h3, h4 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  margin: 1rem 0;
+}
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
   margin-top: .5rem;
 }
 h2 {
-  font-size: 1.5rem;
+  font-size: 2.2rem;
+  margin-top: 0;
 }
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 h4 {
-  font-size: 1.1rem;
-  font-weight: normal;
+  font-size: 1.2rem;
 }
 
 p.description {
