use variable for headers font family

--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -2,6 +2,7 @@ $breakpoint-phone-width: 735px;
 $breakpoint-tablet-width: 1023px;
 
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-headers: 'Open Sans', sans-serif;
 $font-size: 15px;
 
 $link-color: #7234DC;
