--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -43,7 +43,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family-headers;
   font-weight: 400;
   margin: 1rem 0;
 }
