--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -52,10 +52,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  a {
+    color: #333;
+  }
 }
 
 /* Form controls */
 .leaflet-control-layers {
+  font-family: $font-family-headers;
+
   label {
     cursor: pointer;
     line-height: 1.3;
