--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -48,18 +48,18 @@ h1, h2, h3, h4 {
   margin: 1rem 0;
 }
 h1 {
-  font-size: 2.4rem;
-  margin-top: .5rem;
+  font-size: 2.1rem;
+  margin-top: 0;
 }
 h2 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   margin-top: 0;
 }
 h3 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 h4 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 p.description {
@@ -84,8 +84,7 @@ td {
 
 th {
   color: #333;
-  font-size: .95rem;
-  font-weight: 500;
+  font: 600 .95rem $font-family-headers;
   padding: .25em .5em;
   text-align: center;
   text-transform: uppercase;
