--- a/src/htdocs/css/mappane/_mousePosition.scss
+++ b/src/htdocs/css/mappane/_mousePosition.scss
@@ -2,7 +2,7 @@
   background-color: rgba(255, 255, 255, .7);
   box-shadow: 0 0 5px #bbb;
   color: #333;
-  font: 11px/1.5 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font: 11px/1.5 $font-family;
   margin: 0;
   padding: 0 5px;
 }
