more display tweaks for binned tables w/ new totals row

--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -9,6 +9,9 @@ $link-color: #7234DC;
 $link-color-active: #DC406D;
 $link-color-visited: #7234DC;
 
+$th-border-color: #ccc;
+$tr-border-color: #e8e8e8;
+
 /* MMI / PAGER (impact bubbles) */
 
 $mmi-font-family: Tahoma, Verdana, Segoe, sans-serif;
