--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,3 +1,5 @@
+$total-bg-color: #f7f7f7;
+
 #summaryPane {
   h2 + p {
     margin-bottom: 2rem;
@@ -33,14 +35,14 @@
 
   .bin {
     td {
-      padding: .4em .5em;
+      padding: .4em 1em;
 
       &:not(:first-child) {
         text-align: right;
       }
 
       &.total {
-        background: #fafafa;
+        background-color: $total-bg-color;
       }
     }
 
@@ -49,21 +51,22 @@
       padding-right: .25em;
 
       &.period {
+        border-bottom: 1px solid $tr-border-color;
         color: #000;
         font-weight: 400;
         text-align: right;
       }
       &.rowlabel {
-        background: url(../img/gradient-lighter.png) repeat-y;
-        background-position: right;
-        padding-right: 1.5em;
+        border-bottom: 1px solid $tr-border-color;
+        border-right: 1px solid $th-border-color;
+        padding-right: 1em;
         text-align: center;
       }
     }
 
     tr {
       &.totals td {
-        background: #fafafa;
+        background-color: $total-bg-color;
       }
     }
   }
