add slight transparency to error status bar

--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -25,7 +25,7 @@
     }
 
     &.error {
-      background-color: rgb(223, 62, 62);
+      background-color: rgba(223, 62, 62, 0.92);
       border-color: rgb(195, 0, 0);
       color: #fff;
       padding: 3px 0;
