--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -7,9 +7,10 @@
   z-index: 10000;
 
   p {
-    background-color: rgb(255, 255, 120);
+    background-color: rgba(255, 255, 120, 0.95);
     border-top: 1px solid #eaea87;
     color: #333;
+    display: none;
     font-size: 20px;
     line-height: 1;
     margin: 0;
@@ -18,6 +19,10 @@
     text-align: center;
     position: absolute;
     width: 100%;
+
+    &:first-child {
+      display: block;
+    }
 
     span {
       display: block;
@@ -29,10 +34,6 @@
       border-color: rgb(195, 0, 0);
       color: #fff;
       padding: 3px 0;
-    }
-
-    &.initial {
-      z-index: 9000;
     }
   }
 
