--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -17,16 +17,17 @@
     min-height: 40px;
     padding: 10px 0;
     text-align: center;
+    text-shadow: 1px 1px 3px #fffec6;
     position: absolute;
     width: 100%;
-
-    &:first-child {
-      display: block;
-    }
 
     span {
       display: block;
       font-size: 14px;
+    }
+
+    &:first-child {
+      display: block;
     }
 
     &.error {
@@ -34,6 +35,7 @@
       border-color: rgb(195, 0, 0);
       color: #fff;
       padding: 3px 0;
+      text-shadow: 1px 1px 3px #922c2c;
     }
   }
 
