--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -22,8 +22,27 @@
     width: 100%;
 
     span {
+      animation: loading 1s infinite;
+      display: inline-block;
+      font: 1.2em georgia;
+      line-height: .25;
+
+      &:nth-child(1) {
+        padding-left: 3px;
+      }
+      &:nth-child(2) {
+        animation-delay: .15s;
+      }
+      &:nth-child(3) {
+        animation-delay: .3s;
+      }
+    }
+
+    strong {
       display: block;
       font-size: 14px;
+      font-weight: normal;
+      margin-top: 2px;
     }
 
     &:first-child {
@@ -34,7 +53,7 @@
       background-color: rgba(223, 62, 62, 0.92);
       border-color: rgb(195, 0, 0);
       color: #fff;
-      padding: 3px 0;
+      padding: 1px 0;
       text-shadow: 1px 1px 3px #922c2c;
     }
   }
@@ -42,5 +61,14 @@
   &.hide {
     height: 0;
     transition: height .25s ease-out .25s;
+  }
+}
+
+@keyframes loading {
+  0%, 100% {
+    opacity: .1;
+  }
+  20% {
+    opacity: 1;
   }
 }
