--- a/src/htdocs/css/_forms.scss
+++ b/src/htdocs/css/_forms.scss
@@ -32,7 +32,7 @@ button {
   }
 }
 
-/* Check boxes / radio inputs
+/* Check boxes / radio inputs (customized to Leaflet's html rendering)
 --------------------------------------------- */
 
 input[type="checkbox"], input[type="radio"] {
@@ -98,4 +98,112 @@ input[type=text], input[type=number] {
   &:-webkit-autofill {
     background: none !important;
   }
+}
+
+/* Range inputs - adapted from:
+   https://css-tricks.com/sliding-nightmare-understanding-range-input/
+--------------------------------------------- */
+
+$track-w: 15em;
+$track-h: .25em;
+$thumb-d: 1.1em;
+$track-c: $link-color;
+$track-bg: #ccc;
+$dist: $track-w - $thumb-d;
+
+@mixin track($color1, $color2) {
+  background: linear-gradient($color1, $color1) no-repeat $color2;
+  background-size: 25% 100%;
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  height: $track-h;
+  width: $track-w;
+}
+
+@mixin thumb() {
+  background: #fff;
+  border: 1px solid #aaa;
+  border-radius: 50%;
+  box-shadow: 0px 1px 2px #bbb;
+  box-sizing: border-box;
+  height: $thumb-d;
+  width: $thumb-d;
+}
+
+[type='range'] {
+  &, &::-webkit-slider-thumb {
+    -webkit-appearance: none
+  }
+
+  background: transparent;
+  cursor: pointer;
+  flex: 1;
+  font: inherit;
+  margin: 0;
+  min-height: $thumb-d;
+  outline: 0;
+  padding: 0;
+
+  ~ output {
+    background: #fff;
+    border-radius: 3px;
+    color: #333;
+    display: block;
+    left: calc(.5 * $thumb-d);
+    padding: .25em .5em;
+    position: absolute;
+    top: 0;
+    transform: translate(calc((var(--val) - var(--min))/(var(--max) - var(--min)) * calc($dist) - 50%));
+  }
+
+  &::-moz-focus-outer {
+    border: 0;
+  }
+
+  &::-webkit-slider-runnable-track {
+    @include track($track-c, $track-bg)
+  }
+  &::-moz-range-track {
+    @include track($track-c, $track-bg)
+  }
+  &::-ms-track {
+    @include track($track-c, $track-bg)
+  }
+
+  &::-webkit-slider-thumb {
+    margin-top: calc(.5 * ($track-h - $thumb-d));
+    @include thumb
+  }
+  &::-moz-range-thumb {
+    @include thumb
+  }
+  &::-ms-thumb {
+    margin-top: 0;
+    @include thumb
+  }
+
+  &::-ms-tooltip {
+    display: none
+  }
+}
+
+.inverted [type='range'] {
+  &::-webkit-slider-runnable-track {
+    @include track($track-bg, $track-c)
+  }
+  &::-moz-range-track {
+    @include track($track-bg, $track-c)
+  }
+  &::-ms-track {
+    @include track($track-bg, $track-c)
+  }
+}
+
+.slider {
+  align-items: center;
+  display: flex;
+  height: 5.5em;
+  position: relative;
+  width: $track-w;
 }
