bug fix: var ref incorrect

--- a/src/htdocs/css/features/_stationsFeature.scss
+++ b/src/htdocs/css/features/_stationsFeature.scss
@@ -30,7 +30,7 @@
 }
 
 .mmiI {
-  background-color: $mmiI !important;
+  background-color: $mmiI-color !important;
   box-shadow: 0 0 1px #666;
   color: $mmiI-text-color !important;
 
