--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -1,5 +1,3 @@
-@import '_forms.scss';
-
 $reset-button-color: #efefef;
 
 #editPane {
@@ -97,5 +95,10 @@ $reset-button-color: #efefef;
   .required {
     color: #c00;
     margin-top: 1rem;
+  }
+
+  .view {
+    font-style: normal;
+    text-transform: uppercase;
   }
 }
