--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -13,7 +13,7 @@ $total-bg-color: #f7f7f7;
     font-size: 1em;
     margin-bottom: 0;
 
-    &:after {
+    &.filter:after {
       content: ':';
     }
   }
